# RustMcServer

./: Cargo.toml  README.md
res/: server.json
src/: chat.rs  main.rs  mojang.rs  network.rs  packets.rs  player.rs  server.rs  utils.rs  world.rs
src/entity/: entity.rs
